Populate JVM test/run environment with runtime classpath and jvmArgs
- Build a runtime-inclusive classpath (source/resource output dirs + runtime module dependency artifacts, excluding sources/javadoc classifiers)

- Add getJvmArgs() to the GradleSourceSet model and capture Test task JVM args in SourceSetsModelBuilder

- Populate jvmOptions from the source set JVM args; leave environment empty to avoid leaking host env

- Add BuildTargetServiceTest coverage for the JVM test environment